New dropdown menu, game page route

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,14 +9,17 @@
     <title>Memory Game</title>
 </head>
 <body>
-    <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-    </div>
     <h1>First page</h1>
+    <form action='/game'></form>
+        <div class="dropdown">
+            <button class="dropbtn">Game menu</button>
+            <div class="dropdown-content">
+            <a href="/game">One card</a>
+            <a href="/game">Two cards</a>
+            <a href="/game">Three cards</a>
+            <button id="submit" type="submit">SUBMIT</button>
+            </div>
+        </div>
+    </form>
 </body>
 </html>
