Game start screen version and some animation on the cards

--- a/memory_game_generate_images - Copy/templates/index.html
+++ b/memory_game_generate_images - Copy/templates/index.html
@@ -11,6 +11,17 @@
 </head>
 <body>
     <h1 class="page-title">Flip-And-Match</h1>
+    <div class="overlay-text visible">
+        Click to start
+    </div>
+    <div id="game-over-text"  class="overlay-text">
+        GAME OVER!
+        <span class="overlay-text-small">Click to Restart</span>
+    </div>
+    <div id="victory-text"  class="overlay-text">
+        VICTORY!
+        <span class="overlay-text-small">Click to Restart</span>
+    </div>
     <div class="game-container">
         <div class="game-dif">
             <label class="game-info-dif" for="difficulty">Game Difficulty</label>
