--- a/memory_game_generate_images - Copy/static/styles.css
+++ b/memory_game_generate_images - Copy/static/styles.css
@@ -1,14 +1,14 @@
 /* importing a font-family */
 @font-face {
     font-family: "Creepy";
-    src: url("../Assets/Fonts/Creepy.woff") format("woff"),
-    url("../Assets/Fonts/Creepy.woff2") format("woff2")
+    src: url("Fonts/Creepy.woff") format("woff"),
+    url("Fonts/Creepy.woff2") format("woff2")
 }
 
 @font-face {
     font-family: "Lunacy";
-    src: url("../Assets/Fonts/Lunacy.woff") format("woff"),
-    url("../Assets/Fonts/Lunacy.woff2") format("woff2")
+    src: url("Fonts/Lunacy.woff") format("woff"),
+    url("Fonts/Lunacy.woff2") format("woff2")
 }
 
 * {
@@ -17,6 +17,7 @@
 
 html {
     min-height: 100vh;  /* the page streches at least all the height of the window */
+    cursor: url("../static/Cursors/Ghost.cur"), auto;
 }
 
 body {
@@ -36,18 +37,21 @@ body {
     grid-column: 1 / -1;   /* to span from the first column to the last */
     display: flex;    /* the text is placed side by side */
     justify-content: space-evenly;   /* creates space between the text */
+    cursor: pointer;
 }
 
 .game-dif {
     grid-column: 1 / -1;   /* to span from the first column to the last */
     display: flex;
     justify-content: space-evenly;
+    cursor: pointer;
 }
 
 .game-info-dif {
     color: rgb(238, 57, 96);
     font-family: Lunacy, serif;
     font-size: 1.5em;
+    cursor: pointer;
 }
 
 .game-info {
@@ -72,6 +76,7 @@ body {
     grid-gap: 10px;   /* for the gap between the columns */
     margin: 50px;
     justify-content: center;
+    perspective: 500px;
 }
 
 i.fab {
@@ -86,7 +91,7 @@ i.fab {
     text-align: center;
     border: 1px solid darkblue;
     border-radius: 2px;
-    cursor: pointer;
+    cursor: url("../static/Cursors/GhostHover.cur"), auto;
     transform: scale(.9);
 }
 
@@ -103,14 +108,66 @@ i.fab::after {
     background-color: rgb(226, 150, 181);
     /* background-image: url("ember.png"); */
     /* background-image: url("../Assets/Images/Pumpkin.png"); */
-    background-image: url("../static/Ghost.png");
+    background-image: url("../static/Images/Ghost.png");
     background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
     content: '';
 }
 
+#gameContainer:hover i.fab::after {
+    animation: dance 2s linear infinite 1000ms;  /* for the animation on the back of the card */
+}
+
+@keyframes dance {
+    0%, 100% {
+        transform: rotate(0);
+    }
+    25% {
+        transform: rotate(-5deg);
+    }
+    75% {
+        transform: rotate(5deg);
+    }
+}
+
 .reveal::after,
 .matched::after {
     content: none !important;  /* so it overwrites */
+}
+
+.overlay-text {
+    display: none;
+    position: fixed;
+    top: 0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;   /* so that the text is in front of everything */
+    color: rgb(240, 14, 63);
+    font-family: Creepy, serif;
+    flex-direction: column;
+    transition: background-color 500ms, font-size 500ms;
+}
+
+.overlay-text-small {
+    font-size: 0.3em;
+}
+
+.overlay-text.visible {
+    display: flex;
+    animation: overlay-grow 500ms forwards;
+}
+
+@keyframes overlay-grow {
+    from {
+        background-color: rgba(0, 0, 0, 0);
+        font-size: 0;
+    }
+    to {
+        background-color: rgba(0, 0, 0, 0.8);
+        font-size: 10em;
+    }
 }
