--- a/memory_game_generate_images - Copy/templates/first_page.html
+++ b/memory_game_generate_images - Copy/templates/first_page.html
@@ -8,12 +8,16 @@
 </head>
 <body>
 <div id="title">Memory Card Game
-    <label id="'standard">Standard</label>
+    <span class="standardg">
+    <label id="standard">Standard</label>
     <button id="play-button"><a style="text-decoration: none;" href="/play">PLAY</a></button>
+    </span>
+    <span class="customisedg">
     <label id="customised">Customised game</label>
     <button id="play-button"><a style="text-decoration: none;" href="/play">2 cards</a></button>
     <button id="play-button"><a style="text-decoration: none;" href="/play">4 cards</a></button>
     <button id="play-button"><a style="text-decoration: none;" href="/play">8 cards</a></button>
+    </span>
 </div>
 </body>
 </html>
