--- a/memory_game_generate_images - Copy/templates/first_page.html
+++ b/memory_game_generate_images - Copy/templates/first_page.html
@@ -14,10 +14,8 @@
     </span>
     <span class="customisedg">
     <label id="customised">Customised game</label>
-    <button id="play-button"><a style="text-decoration: none;" href="/play">2 cards</a></button>
-    <button id="play-button"><a style="text-decoration: none;" href="/play">4 cards</a></button>
-    <button id="play-button"><a style="text-decoration: none;" href="/play">8 cards</a></button>
+    <button id="play-button"><a style="text-decoration: none;" href="/customised" class="game-info-dif" name="startGame" onclick="startGame();">Go to the game</a></button>
     </span>
-</div>
+</div>>
 </body>
 </html>
